--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2025.11.12
 charset-normalizer==3.4.4
+execnet==2.1.2
 greenlet==3.2.4
 idna==3.11
 iniconfig==2.3.0
@@ -11,6 +12,7 @@ Pygments==2.19.2
 pytest==8.4.2
 pytest-base-url==2.1.0
 pytest-playwright==0.7.1
+pytest-xdist==3.8.0
 python-slugify==8.0.4
 requests==2.32.5
 text-unidecode==1.3
